build for Java 11

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java'
     id 'application'
+    id 'org.javamodularity.moduleplugin' version '1.2.1'
     id 'signing'
     id 'maven'
 }
@@ -29,8 +29,8 @@ if (currentOS.isWindows()) {
 }
 
 dependencies {
-    compile "com.gluonhq:charm-cloudlink-client:4.4.7"
-    runtime "com.gluonhq:charm-down-plugin-storage-desktop:3.6.0"
+    // compile "com.gluonhq:charm-cloudlink-client:4.4.7"
+    // runtime "com.gluonhq:charm-down-plugin-storage-desktop:3.6.0"
     testCompile "junit:junit:4.12"
     compile "org.openjfx:javafx-controls:11-ea+23:$classifier"
     compile "org.openjfx:javafx-graphics:11-ea+23:$classifier"
