--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
             <version>5.13.2</version>
             <scope>test</scope>
         </dependency>
+  <dependency>
+    <groupId>org.openjdk.jmh</groupId>
+    <artifactId>jmh-core</artifactId>
+    <version>1.37</version>
+  </dependency>
+<dependency>
+    <groupId>org.openjdk.jmh</groupId>
+    <artifactId>jmh-generator-annprocess</artifactId>
+    <version>1.37</version>
+</dependency>
     </dependencies>
 
     <build>
@@ -32,6 +42,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
+<configuration>
+        <annotationProcessorPaths>
+          <path>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.37</version>
+          </path>
+        </annotationProcessorPaths>
+</configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -44,9 +63,11 @@
                         </goals>
                     </execution>
                 </executions>
+<!--
                 <configuration>
                     <mainClass>org.redfx.strange.demo.Demo</mainClass>
                 </configuration>
+-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
